prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/syntax_errors/expected_identifier.diag.txt
ERROR: expected 'IDENTIFIER'
testData/diagnostics/compilation_errors/syntax_errors/expected_identifier.nut:2:9

// EXPECT_ERROR: "expected 'IDENTIFIER'"
function 123() {
         ^--
    return 42


